-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.13
-
None
-
-
ed70faf87 (dev), bb5134726 (6.7), 26e570051 (tqtc/lts-6.5)
inconsistency between QCoreApplication:installNativeEventFilter and QCoreApplication:removeNativeEventFilter.
InstallNativeEventFilter requests an instance of QAbstractEventDispatcher with: QAbstractEventDispatcher::instance(QCoreApplicationPrivate::theMainThread.loadAcquire());
RemoveNativeEventFilter requests the instance without MainThread parameter.
This results in a leak / filter is not removed, if the RemoveNativeEventFilter is called from a thread other than the MainThread.
| For Gerrit Dashboard: QTBUG-124783 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 557896,4 | QCoreApplication: make removeNativeEventFilter() remove from main thread | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 560171,2 | QCoreApplication: make removeNativeEventFilter() remove from main thread | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
| 560185,2 | QCoreApplication: make removeNativeEventFilter() remove from main thread | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |