QCoreApplication: make removeNativeEventFilter() remove from main thread

installNativeEventFilter() always installs on the main thread, so match
it.

[ChangeLog][QtCore][QCoreApplication] Fixed a mismatch on which event
dispatcher was modified between installNativeEventFilter() and
removeNativeEventFilter(). Now both functions in QCoreApplication access
the main thread's event dispatcher. To access the current thread's
dispatcher, use QAbstractEventDispatcher's functions.

Fixes: QTBUG-124783
Pick-to: 6.5
Change-Id: I6979d02a7395405cbf23fffd17ca09e1ac43f1f3
Reviewed-by: David Faure <david.faure@kdab.com>
(cherry picked from commit ed70faf87af42dea290853730093b3c2ecb90b0e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>